# ujind

./: .gitignore  CMakeLists.txt  broadcast.c  broadcast.h  buildroot.cmake  buildsetup.sh  conf.c  conf.h  context.h  logger.c  lte_at.c  lte_at.h  ma_main.c  main.c  mcu_cmd.c  mcu_cmd.h  serial.c  serial.h  serial_termios2.c  serial_termios2.h
scripts/: ujind.conf  ujind.service
